- Implemented slide-out for sidebar in collapsed mode - Fixed font-size and wrong font assignments - UI fixes - Fixed sidebar width if user hasn't resized it ever yet

--- a/stylus/framework/chat-themes.styl
+++ b/stylus/framework/chat-themes.styl
@@ -288,3 +288,10 @@ body.client-style-compact
 		.nav-compact
 			display: block
 			width: 64px !important
+			&:hover
+				width: 200px !important
+				max-width: 100% !important
+				.channel-name
+					opacity: 1.0 !important
+					padding-left: 4px !important
+					transition-delay: 0.15s !important
