--- a/stylus/framework/sidebar.styl
+++ b/stylus/framework/sidebar.styl
@@ -320,10 +320,10 @@ a.nav-title-wrap
 				height: 32px
 			.offline, .online
 				border: solid 1px sidebar-background
-				width: 10px
-				height: 10px
-				bottom: -1px
-				right: -1px
+				width: 8px
+				height: 8px
+				bottom: 0px
+				right: 0px
 		.icon
 			padding: 3px 0
 		.room-icon
@@ -347,10 +347,9 @@ a.nav-title-wrap
 			font-size: 1.1em
 			left: 0px
 			right: 0px
-			padding-left: 9px
+			padding-left: 10px
 			padding-right: 6px
 			color: white
-			overflow: hidden
 		&:hover
 			background: sidebar-hover
 			.offline, .online
